--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 allegro datafiles
 bouncing ball + gravity
 int nbuttons = install_mouse();
+
+!google serialise C
+PDFs/Computers/Programming/Specific/network programming.pdf
